--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
     "build": "tsc && vite build"
   },
   "dependencies": {
-    "@motion-canvas/core": "^3.17.2",
+    "@lezer/cpp": "^1.1.3",
     "@motion-canvas/2d": "^3.17.2",
-    "@motion-canvas/ffmpeg": "^1.1.0"
+    "@motion-canvas/core": "^3.17.2",
+    "@motion-canvas/ffmpeg": "^1.1.0",
+    "lezer": "^0.13.5"
   },
   "devDependencies": {
     "@motion-canvas/ui": "^3.17.2",
