--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@motion-canvas/2d": "^3.17.2",
     "@motion-canvas/core": "^3.17.2",
     "@motion-canvas/ffmpeg": "^1.1.0",
+    "codemirror": "^6.0.1",
     "lezer": "^0.13.5"
   },
   "devDependencies": {
